# full_coverage_path_planner

./: CMakeLists.txt  README.md  global_planner_plugin.xml  package.xml
include/full_coverage_path_planner/: full_coverage_path_planner.hpp  navfn.hpp  spiral_stc.h
src/: common.cpp  full_coverage_path_planner.cpp  navfn.cpp  spiral_stc.cpp
test/full_coverage_path_planner/: Untitled.txt  test_full_coverage_path_planner_launch.py  test_full_coverage_path_planner_system.py
test/src/: test_2d.cpp  test_common.cpp  test_spiral_stc.cpp  util.cpp
